# tij

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
.work/docs/: plan.md
09/8b4d0b1ede/: metadata.json
09/8b4d0b1ede/0/: content_hash.txt  context.md  metadata.json  prompt.txt
29/9d99cce90b/: metadata.json
29/9d99cce90b/0/: content_hash.txt  context.md  metadata.json  prompt.txt
32/d1c03281d4/: metadata.json
32/d1c03281d4/0/: content_hash.txt  context.md  metadata.json  prompt.txt
33/cdae759784/: metadata.json
33/cdae759784/0/: content_hash.txt  context.md  metadata.json  prompt.txt
3c/79e00521d9/: metadata.json
3c/79e00521d9/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
68/b88a394690/: metadata.json
68/b88a394690/0/: content_hash.txt  context.md  metadata.json  prompt.txt
68/b88a394690/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
b9/2ea37c5f74/: metadata.json
b9/2ea37c5f74/0/: content_hash.txt  context.md  metadata.json  prompt.txt
cc/9e3f453a5c/: metadata.json
cc/9e3f453a5c/0/: content_hash.txt  context.md  metadata.json  prompt.txt
e7/037b81c0d2/: metadata.json
e7/037b81c0d2/0/: content_hash.txt  context.md  metadata.json  prompt.txt
ec/0062572509/: metadata.json
ec/0062572509/0/: content_hash.txt  context.md  metadata.json  prompt.txt
f1/5f6c8c99ba/: metadata.json
f1/5f6c8c99ba/0/: content_hash.txt  context.md  metadata.json  prompt.txt
ff/9f4cc7f41f/: metadata.json
ff/9f4cc7f41f/0/: content_hash.txt  context.md  metadata.json  prompt.txt
src/: app.rs  keys.rs  lib.rs  main.rs
src/app/: actions.rs  clipboard.rs  input.rs  mod.rs  navigation.rs  refresh.rs  render.rs  state.rs
src/app/actions/: bookmark.rs  dialog.rs  mod.rs  push.rs  tag.rs  workspace.rs
src/app/helpers/: mod.rs  revision.rs
src/jj/: constants.rs  executor.rs  interactive.rs  mod.rs  parser.rs  template.rs
src/jj/parser/: annotation.rs  bookmark.rs  (+11 more)
src/model/: annotation.rs  bookmark.rs  change.rs  command_record.rs  conflict.rs  diff.rs  evolog.rs  file_status.rs  id.rs  mod.rs  notification.rs  operation.rs  rebase.rs  tag.rs  workspace.rs
src/ui/: mod.rs  navigation.rs  symbols.rs  theme.rs
tests/: integration_basic.rs  integration_bookmark.rs  integration_destructive.rs  integration_git.rs  integration_phase15.rs  integration_phase16.rs  integration_squash.rs  integration_undo.rs  proptest_parsers.proptest-regressions  proptest_parsers.rs  scenario_absorb_workflow.rs  scenario_code_review.rs  scenario_collaboration.rs  scenario_conflict_resolution.rs  scenario_daily_workflow.rs  scenario_feature_branch.rs  scenario_mistake_recovery.rs  scenario_squash_workflow.rs  ui.rs
tests/common/: mod.rs  remote_repo.rs  test_repo.rs
tests/ui/: test_dialog.rs  test_diff.rs  test_help.rs  test_log.rs  test_status.rs
(+75 files in other folders)
