[package]
name = "tij"
version = "0.1.0"
description = "Text-mode interface for Jujutsu - a TUI for jj version control"
authors = ["nakamura.shuta <nakamura.shuta@classmethod.jp>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/nakamura-shuta/tij"
homepage = "https://github.com/nakamura-shuta/tij"
readme = "README.md"
keywords = ["jujutsu", "jj", "tui", "vcs", "git"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
thiserror = "2.0"
scopeguard = "1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
