[package]
name = "tij"
version = "0.3.22"
description = "Text-mode interface for Jujutsu - a TUI for jj version control"
authors = ["nakamura.shuta <nakamura.shuta@classmethod.jp>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/nakamura-shuta/tij"
homepage = "https://github.com/nakamura-shuta/tij"
documentation = "https://docs.rs/tij"
readme = "README.md"
keywords = ["jujutsu", "jj", "tui", "vcs", "git"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"
exclude = [".work/", ".github/", "CLAUDE.md"]

[lib]
name = "tij"
path = "src/lib.rs"

[[bin]]
name = "tij"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
color-eyre = "0.6.3"
thiserror = "2.0"
scopeguard = "1"
regex = "1"

[dev-dependencies]
insta = { version = "1.46.3", features = ["redactions"] }
proptest = "1.10.0"
tempfile = "3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
